--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Montserrat&family=Montserrat+Alternates:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;700&family=Montserrat&family=Montserrat+Alternates:wght@300&display=swap");
 @import "./variables";
 @import "./general";
 @import "./header";
