--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Montserrat&family=Montserrat+Alternates:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;700&family=Montserrat&family=Montserrat+Alternates:wght@300&display=swap");
 html,
 body {
   accent-color: white;
@@ -10,7 +10,7 @@ body {
 @media (max-width: 980px) {
   html,
   body {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
@@ -42,24 +42,64 @@ a {
   color: #00566a;
 }
 
+.bg-primary {
+  background-color: #1d1d1b;
+}
+
 .nav-home nav ul li a {
   color: #fff;
 }
 
+.header-col-1 {
+  width: 350px;
+}
+@media (max-width: 980px) {
+  .header-col-1 {
+    width: 100%;
+  }
+}
+
+.header-col-2 {
+  width: calc(100% - 350px);
+}
+@media (max-width: 980px) {
+  .header-col-2 {
+    width: 100%;
+  }
+}
+
+.show-nav {
+  display: block;
+  height: 100vh;
+  width: 100%;
+  padding-top: 4rem;
+  transition: all 0.4s ease;
+}
+.show-nav ul li {
+  display: block;
+  width: 100%;
+}
+
 #nav-menu {
   cursor: pointer;
-  width: 36px;
+  width: 35px;
+  display: none;
+}
+@media (max-width: 980px) {
+  #nav-menu {
+    display: inline-block;
+  }
 }
 
 #nav-menu > span {
   background-color: #1d1d1b;
   display: block;
-  height: 5px;
+  height: 2px;
   width: 36px;
 }
 
 #nav-menu > span:not(:last-child) {
-  margin-bottom: 5px;
+  margin-bottom: 7px;
 }
 
 #nav-menu,
@@ -108,5 +148,30 @@ a {
   }
   100% {
     opacity: 1;
+  }
+}
+.active {
+  color: #00566a;
+}
+
+.list div:last-child {
+  border: 0;
+}
+
+.submenu li {
+  border-right: 1px solid #1d1d1b;
+  padding-right: 0.5rem;
+  margin-right: 0.5rem;
+}
+.submenu li:last-child {
+  border-right: 0;
+  padding-right: 0;
+  margin-right: 0;
+}
+
+@media (max-width: 980px) {
+  .px-14 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }/*# sourceMappingURL=main.css.map */
