--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   @media (max-width: 980px) {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
@@ -34,4 +34,8 @@ a {
 }
 .text-secondary {
   color: $color-secondary;
+}
+
+.bg-primary {
+  background-color: $color-primary;
 }
