--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -9,3 +9,30 @@
     }
   }
 }
+
+.header-col-1 {
+  width: 350px;
+  @media (max-width: 980px) {
+    width: 100%;
+  }
+}
+.header-col-2 {
+  width: calc(100% - 350px);
+  @media (max-width: 980px) {
+    width: 100%;
+  }
+}
+
+.show-nav {
+  display: block;
+  height: 100vh;
+  width: 100%;
+  padding-top: 4rem;
+  transition: all 0.4s ease;
+  ul {
+    li {
+      display: block;
+      width: 100%;
+    }
+  }
+}
