--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -46,3 +46,11 @@
     padding-right: 2rem;
   }
 }
+
+.modal-image {
+  height: 80vh;
+  @media (max-width: 980px) {
+    height: auto;
+    width: 100%;
+  }
+}
