--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -8,7 +8,7 @@
 }
 
 .fade-in {
-  animation: fadeIn 0.5s ease forwards;
+  animation: fadeIn 0.3s ease forwards;
 }
 @keyframes fadeIn {
   0% {
@@ -19,8 +19,24 @@
   }
 }
 
+.fade-out {
+  animation: fadeOut 0.3s ease forwards;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .active {
   color: $color-secondary;
+  @media (max-width: 980px) {
+    color: white;
+    text-decoration: underline;
+  }
 }
 
 .list div:last-child {
