--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -39,7 +39,7 @@ a {
 }
 
 .text-secondary {
-  color: #00566a;
+  color: #02283f;
 }
 
 .bg-primary {
@@ -47,7 +47,7 @@ a {
 }
 
 .bg-secondary {
-  background-color: #00566a;
+  background-color: #02283f;
 }
 
 .nav-home nav ul li a {
@@ -118,7 +118,7 @@ a {
   }
 }
 .active {
-  color: #00566a;
+  color: #02283f;
 }
 @media (max-width: 980px) {
   .active {
@@ -156,5 +156,16 @@ a {
   .modal-image {
     height: auto;
     width: 100%;
+  }
+}
+
+.text-sm {
+  font-size: 0.8rem !important;
+}
+
+@media (max-width: 980px) {
+  .presentation {
+    background: #02283f;
+    color: white;
   }
 }/*# sourceMappingURL=main.css.map */
