--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,4 +3,4 @@ $font-secondary: "Montserrat Alternates", sans-serif;
 $font-tertiary: "Alegreya", serif;
 
 $color-primary: #1d1d1b;
-$color-secondary: #02283f;
+$color-secondary: #02304c;
