--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,11 +6,12 @@ body {
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 15px;
 }
 @media (max-width: 980px) {
   html,
   body {
-    font-size: 14px;
+    font-size: 13px;
   }
 }
 
@@ -31,7 +32,7 @@ a {
 }
 
 .font-tertiary {
-  font-family: "Alegreya", serif;
+  font-family: "Alegreya", serif !important;
 }
 
 .text-primary {
@@ -39,7 +40,7 @@ a {
 }
 
 .text-secondary {
-  color: #02283f;
+  color: #02304c;
 }
 
 .bg-primary {
@@ -47,7 +48,7 @@ a {
 }
 
 .bg-secondary {
-  background-color: #02283f;
+  background-color: #02304c;
 }
 
 .nav-home nav ul li a {
@@ -118,7 +119,8 @@ a {
   }
 }
 .active {
-  color: #02283f;
+  color: #02304c;
+  border-bottom: 1px solid #02304c;
 }
 @media (max-width: 980px) {
   .active {
@@ -159,13 +161,9 @@ a {
   }
 }
 
-.text-sm {
-  font-size: 0.8rem !important;
-}
-
 @media (max-width: 980px) {
   .presentation {
-    background: #02283f;
+    background: #02304c;
     color: white;
   }
 }/*# sourceMappingURL=main.css.map */
